--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 streamlit==1.29.0
 transformers==4.35.0
-torch==2.1.0
+torch==2.1.0+cpu
 sentence-transformers==2.2.2
 faiss-cpu==1.7.4
 pandas==2.1.0
 numpy==1.24.4
+nest_asyncio==1.5.6
