--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit==1.29.0
 transformers==4.35.0
-torch==2.0.1+cpu
+torch==2.2.0
 sentence-transformers==2.2.2
 faiss-cpu==1.7.4
 pandas==2.1.0
